--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header class="header">
     <div class="container">
-      <img src="../images/logo.png" alt="EZ-SWAP Logo" class="logo">
+      <img src="logo.png" alt="EZ-SWAP Logo" class="logo">
       <nav class="navbar">
         <a href="/">Home</a>
         <a href="/about">About</a>
@@ -37,19 +37,19 @@
     <!-- Image Grid -->
     <div class="image-grid">
       <div class="grid-item">
-        <img src="../images/homeswap1.png" alt="Home Swap 1">
+        <img src="homeswap1.png" alt="Home Swap 1">
         <h3 class="grid-title">Easy Battery Swap</h3>
       </div>
       <div class="grid-item">
-        <img src="../images/homerange2.png" alt="Home Swap 2">
+        <img src="homerange2.png" alt="Home Swap 2">
         <h3 class="grid-title">Reduce Range Anxiety</h3>
       </div>
       <div class="grid-item">
-        <img src="../images/hometime3.png" alt="Home Swap 3">
+        <img src="hometime3.png" alt="Home Swap 3">
         <h3 class="grid-title">Time Saving</h3>
       </div>
       <div class="grid-item">
-        <img src="../images/homemonitor4.png" alt="Home Swap 4">
+        <img src="homemonitor4.png" alt="Home Swap 4">
         <h3 class="grid-title">Live Monitoring</h3>
       </div>
     </div>
