--- a/contact.html
+++ b/contact.html
@@ -6,19 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Swap | EZ-SWAP</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <header class="header">
     <div class="container">
-      <img src="../images/logo.png" alt="EZ-SWAP Logo" class="logo">
+      <img src="logo.png" alt="EZ-SWAP Logo" class="logo">
       <nav class="navbar">
-        <a href="/">Home</a>
-        <a href="/about">About</a>
-        <a href="/swap">Swap</a>
-        <a href="/monitor">Monitor</a>
-        <a href="/contact">Contact</a>
+        <a href="home.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="swap.html">Swap</a>
+        <a href="monitor.html">Monitor</a>
+        <a href="contact.html">Contact</a>
        
       </nav>
     </div>
@@ -62,11 +62,11 @@
         <p>&copy; 2024 EZ-SWAP. All rights reserved.</p>
         <p>Contact: contact@ezswap.com</p>
         <div class="footer-links">
-          <a href="./index.html">Home</a>
-          <a href="./about.html">About</a>
-          <a href="./swap.html">Swap</a>
-          <a href="./monitor.html">Monitor</a>
-          <a href="./contact.html">Contact</a>
+         <a href="home.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="swap.html">Swap</a>
+        <a href="monitor.html">Monitor</a>
+        <a href="contact.html">Contact</a>
           
         </div>
       </div>
