--- a/swap.html
+++ b/swap.html
@@ -12,7 +12,7 @@
 <body>
   <header class="header">
     <div class="container">
-      <img src="../images/logo.png" alt="EZ-SWAP Logo" class="logo">
+      <img src="logo.png" alt="EZ-SWAP Logo" class="logo">
       <nav class="navbar">
         <a href="home.html">Home</a>
         <a href="about.html">About</a>
