--- a/swap.html
+++ b/swap.html
@@ -14,7 +14,7 @@
     <div class="container">
       <img src="logo.png" alt="EZ-SWAP Logo" class="logo">
       <nav class="navbar">
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="swap.html">Swap</a>
         <a href="monitor.html">Monitor</a>
@@ -67,7 +67,7 @@
         <p>&copy; 2024 EZ-SWAP. All rights reserved.</p>
         <p>Contact: contact@ezswap.com</p>
         <div class="footer-links">
-         <a href="home.html">Home</a>
+         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="swap.html">Swap</a>
         <a href="monitor.html">Monitor</a>
