--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <div class="container">
       <img src="logo.png" alt="EZ-SWAP Logo" class="logo">
       <nav class="navbar">
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="swap.html">Swap</a>
         <a href="monitor.html">Monitor</a>
